--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/server.js",
   "scripts": {
+    "start": "node ./src/server.js",
     "start-prod": "set NODE_ENV=production && node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
