--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "start-prod": "set NODE_ENV=production && node ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
     "lint": "eslint ./src"
   },
